Move the lambda counter to the classloader, so we have a per-script lambda ID